# fast-matmul

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: reports.yml  rust.yml
benches/: auto-tuning.rs  best-params.rs  matmul.rs  naive-vs-fast.rs
reports/: fast.m1.asm  fast.m1.dev.asm  fast.m1.release.asm  fast.x86.asm  index.html  morello-2048-attu7.c  morello.out  naive.m1.asm  naive.x86.asm  ser-200.mrl  ser-2048.mrl
reports/1-naive-vs-fast/: index.html
reports/1-naive-vs-fast/Matmul/2000/: index.html
reports/10-naive-vs-fast/Matmul/fast/2048/: index.html
reports/10-naive-vs-fast/Matmul/naive/2048/: index.html
reports/11-naive-vs-fast/Matmul/fast/2048/: index.html
reports/2-naive-vs-fast/: index.html
reports/2-naive-vs-fast/Matmul/: index.html
reports/2-naive-vs-fast/Matmul/2048/: index.html
reports/5-best-params/: index.html
reports/5-best-params/Matmul/: index.html
reports/5-best-params/Matmul/fast/: index.html
reports/6-naive-vs-fast/Matmul/2048/: index.html
reports/7-naive-vs-fast/: index.html
reports/7-naive-vs-fast/Matmul/: index.html
reports/8-best-params/: index.html
reports/8-best-params/Matmul/: index.html
reports/8-best-params/Matmul/fast/: index.html
reports/Matmul/: index.html
reports/Matmul/fast/2000/: index.html
reports/Matmul/naive/2000/: index.html
reports/bounds_check-asm/: 1.m1.asm  2.m1.asm  3.m1.asm  after.m1.asm  before.m1.asm
src/: fast.rs  lib.rs  main.rs  matrix.rs  naive.rs  param.rs  test_util.rs  trans.rs
src/matrix/: format.rs  macros.rs  pack.rs
(+1752 files in other folders)
