[package]
name = "fast-matmul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0"
fake = "2.5.0"
mimalloc = { version = "*", default-features = false } # disable secure mode

[dev-dependencies]
criterion = { version = "0.4.0", features = ["real_blackbox"] }
itertools = "0.10"

[[bench]]
name = "best-params"
harness = false

[[bench]]
name = "naive-vs-fast"
harness = false

# The bench profile inherits the settings from the release profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
